--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -1,8 +1,7 @@
-
 .map {
-  width: 10000px;
-  height: 10000px;
-  margin: 100px 0;
+  width: 400px;
+  height: 400px;
+  margin: auto 0;
 
   .marker {
     width: 50px;
