--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
   margin: 0;
-  background: linear-gradient(30deg, rgb(0, 39, 65), rgb(0, 91, 151));
+  background: rgb(90, 21, 71);
   color: white;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 #root {
   height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
 }
 
