--- a/src/components/AddressForm/addressForm.scss
+++ b/src/components/AddressForm/addressForm.scss
@@ -3,3 +3,14 @@
   flex-direction: column;
   align-items: flex-start;
 }
+.favorite-icon {
+  margin-left: auto;
+  color: var(--primary-gray);
+  width: 1.5rem;
+  height: 1.5rem;
+  cursor: pointer;
+
+  &--active {
+    color: var(--accent-orange);
+  }
+}
