--- a/src/components/AddressForm/addressForm.scss
+++ b/src/components/AddressForm/addressForm.scss
@@ -14,3 +14,12 @@
     color: red;
   }
 }
+.country-item {
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+  align-items: center;
+}
+.wrapper-countrys {
+  display: flex;
+}
