--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -11,4 +11,17 @@
   h1 {
     padding: 2rem;
   }
+  .button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    background-color: white;
+    transition: background-color 0.5s ease;
+  }
+
+  .button:hover {
+    background-color: #e0e0e0;
+  }
 }
