--- a/src/App.scss
+++ b/src/App.scss
@@ -17,8 +17,8 @@ body {
 .App {
   display: flex;
   width: 1000px;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
   gap: 5rem;
 }
