--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,21 +2,31 @@
   position: fixed;
   top: 0;
   width: 100%;
+  height: 90px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: white;
   background-color: rgb(90, 21, 71);
   box-shadow: 0px 50px 50px rgba(0, 0, 0, 0.5);
-  h1 {
-    padding: 2rem;
+
+  .googleLogin {
+    padding-right: 3rem;
   }
-  .button {
+
+  h1 {
+    margin: 0;
+    padding-left: 3rem;
+  }
+
+  .buttonSignOut {
+    margin-right: 3rem;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    color: black;
     background-color: white;
     transition: background-color 0.5s ease;
   }
