--- a/src/components/AddressForm/addressForm.scss
+++ b/src/components/AddressForm/addressForm.scss
@@ -94,18 +94,15 @@
   align-items: flex-start;
   font-family: Arial, sans-serif;
   font-size: 16px;
-  margin-bottom: 20px;
-}
-
-.autoCompleteInput {
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
 }
 
 .buttons {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  gap: 5px;
 }
 
 .button {
@@ -125,11 +122,8 @@
 }
 
 .wrapper-countries {
-  display: grid;
-  grid-template-columns: repeat(
-    auto-fit,
-    minmax(200px, 1fr)
-  ); /* Responsive grid layout */
+  display: flex;
+  flex-wrap: wrap; /* Allow items to wrap to the next line */
   gap: 20px;
   padding: 20px;
   border: 1px solid #ccc;
@@ -142,8 +136,7 @@
 .country-item {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 10px 15px;
+  padding: 5px 10px; /* Adjust padding as needed */
   background-color: #f5f5f5;
   border-radius: 5px;
 }
