--- a/src/components/AutoCompleteInput/AutoCompleteInput.scss
+++ b/src/components/AutoCompleteInput/AutoCompleteInput.scss
@@ -1,27 +1,40 @@
 .autoCompleteInputContainer {
   position: relative;
+  margin: 5px 0 5px 0;
+  input {
+    width: 13rem;
+    list-style: none;
+    border-bottom: 1px solid black;
+    border-radius: 5px;
+    padding: 0.5em 1em;
+
+    &:hover {
+      color: white;
+      cursor: pointer;
+    }
+  }
 
   .addressSuggestions {
-    position: absolute;
-    top: 1.75em;
-    background-color: white;
-    border: 1px solid black;
-    overflow: hidden;
-    border-radius: 4px;
-    color: black;
-    z-index: 999;
-    padding: 0;
+    margin: 0;
+    // position: absolute;
+    // top: 1.75em;
+    // background-color: white;
+    // border: 1px solid black;
+    // overflow: hidden;
+    // border-radius: 4px;
+    // color: black;
+    // z-index: 999;
+    // padding: 0;
 
-    li {
-      list-style: none;
-      border-bottom: 1px solid black;
-      padding: 0.5em 1em;
+    // li {
+    //   list-style: none;
+    //  ;
 
-      &:hover {
-        background-color: rgb(22, 66, 128);
-        color: white;
-        cursor: pointer;
-      }
-    }
+    //   &:hover {
+    //     background-color: rgb(22, 66, 128);
+    //     color: white;
+    //     cursor: pointer;
+    //   }
+    // }
   }
 }
