--- a/src/components/AutoCompleteInput/AutoCompleteInput.scss
+++ b/src/components/AutoCompleteInput/AutoCompleteInput.scss
@@ -15,26 +15,26 @@
   }
 
   .addressSuggestions {
-    margin: 0;
-    // position: absolute;
-    // top: 1.75em;
-    // background-color: white;
-    // border: 1px solid black;
-    // overflow: hidden;
-    // border-radius: 4px;
-    // color: black;
-    // z-index: 999;
-    // padding: 0;
+    position: absolute;
+    top: 1.75em;
+    background-color: white;
+    border: 1px solid black;
+    overflow: hidden;
+    border-radius: 4px;
+    color: black;
+    z-index: 999;
+    padding: 0;
 
-    // li {
-    //   list-style: none;
-    //  ;
+    li {
+      list-style: none;
+      border-bottom: 1px solid black;
+      padding: 0.5em 1em;
 
-    //   &:hover {
-    //     background-color: rgb(22, 66, 128);
-    //     color: white;
-    //     cursor: pointer;
-    //   }
-    // }
+      &:hover {
+        background-color: rgb(22, 66, 128);
+        color: white;
+        cursor: pointer;
+      }
+    }
   }
 }
