--- a/src/components/AddressForm/addressForm.scss
+++ b/src/components/AddressForm/addressForm.scss
@@ -102,7 +102,10 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
-  gap: 5px;
+  gap: 10px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: auto;
 }
 
 .button {
@@ -156,6 +159,7 @@
   font-size: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
+  margin-left: 5px;
 }
 
 .country-item .delete-button:hover {
