--- a/src/components/AutoCompleteInput/AutoCompleteInput.scss
+++ b/src/components/AutoCompleteInput/AutoCompleteInput.scss
@@ -32,7 +32,7 @@
 
       &:hover {
         background-color: rgb(22, 66, 128);
-        color: white;
+        // color: white;
         cursor: pointer;
       }
     }
