--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
+  background-image: url('../src/assets/qb7QmyINuSoKesCuMoym6a.jpg');
+
+  // max-width: 800px; /* Adjust the maximum width as needed */
+  max-height: 757px;
+
+  background-size: cover; /* Adjust this property */
+  background-repeat: no-repeat;
+  background-position: center;
+
   margin: 0;
-  background: rgb(90, 21, 71);
   color: white;
   font-family: 'Poppins', sans-serif;
 }
