--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   align-items: center;
   color: white;
-  background-color: transparent;
+  background-color: rgb(90, 21, 71);
   box-shadow: 0px 50px 50px rgba(0, 0, 0, 0.5);
 
   .googleLogin {
@@ -34,8 +34,4 @@
   .button:hover {
     background-color: #e0e0e0;
   }
-}
-.navbar-scroll {
-  background-color: #f4f6f5;
-  transition: background-color 0.3s ease; /* Add transition for smooth color change */
 }
