--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
+  background-image: url('../src/assets/6Ofis5HLryYWMOIWgg8UMc0Q.jpg');
+  background-size: cover;
+  background-position: bottom;
+  max-height: 700px;
   margin: 0;
-  background: rgb(90, 21, 71);
+  // background: rgb(90, 21, 71);
   color: white;
   font-family: 'Poppins', sans-serif;
 }
