--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   align-items: center;
   color: white;
-  background-color: rgb(90, 21, 71);
+  background-color: transparent;
   box-shadow: 0px 50px 50px rgba(0, 0, 0, 0.5);
 
   .googleLogin {
