--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
-  background-image: url('../src/assets/6Ofis5HLryYWMOIWgg8UMc0Q.jpg');
-  background-size: cover;
-  background-position: bottom;
-  max-height: 700px;
   margin: 0;
+  background-image: url('../src/assets/fAV7gHDvYoCOk6cmIS0CoGs.jpg');
+  background-size: cover;
+  // background-position: bottom;
+  // max-height: 700px;
   // background: rgb(90, 21, 71);
   color: white;
   font-family: 'Poppins', sans-serif;
