--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,13 +1,14 @@
 .nav-container {
+  background-color: #cb2b39;
   position: fixed;
   top: 0;
   width: 100%;
-  height: 90px;
+  height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: white;
-  background-color: transparent;
+  // background-color: transparent;
   box-shadow: 0px 50px 50px rgba(0, 0, 0, 0.5);
 
   .googleLogin {
