--- a/src/components/AddressForm/addressForm.scss
+++ b/src/components/AddressForm/addressForm.scss
@@ -1,93 +1,3 @@
-// // .form {
-// //   display: flex;
-// //   flex-direction: column;
-// //   align-items: flex-start;
-// // }
-// .form {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: flex-start;
-//   font-family: Arial, sans-serif; /* Use a standard font family */
-//   font-size: 16px; /* Base font size */
-//   margin-bottom: 20px; /* Add some margin for spacing */
-// }
-
-// .autoCompleteInput {
-//   margin-bottom: 20px; /* Add some margin for spacing */
-// }
-
-// .buttons {
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   margin-bottom: 20px; /* Add some margin for spacing */
-// }
-
-// .button {
-//   padding: 10px 20px;
-//   border: none;
-//   border-radius: 5px;
-//   cursor: pointer;
-//   background-color: #4285f4;
-//   color: white;
-//   font-family: Arial, sans-serif; /* Use a standard font family */
-//   font-size: 16px; /* Base font size */
-//   transition: background-color 0.3s ease;
-// }
-
-// .button:hover {
-//   background-color: #3a77f7;
-// }
-
-// .wrapper-countries {
-//   display: grid;
-//   grid-template-columns: repeat(
-//     auto-fill,
-//     minmax(200px, 1fr)
-//   ); /* Responsive grid layout */
-//   gap: 20px; /* Add some gap between items */
-//   max-height: 400px; /* Limit the height of the container */
-//   overflow-y: auto; /* Add scrollbar when content exceeds container height */
-//   padding: 20px; /* Add padding for spacing */
-//   border: 1px solid #ccc; /* Add border for visual separation */
-//   border-radius: 5px; /* Add border radius for rounded corners */
-//   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add box shadow for depth */
-// }
-
-// .country-item {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-//   padding: 10px 15px;
-//   background-color: #f5f5f5;
-//   border-radius: 5px;
-// }
-
-// .country-item h2 {
-//   margin: 0;
-//   font-size: 16px;
-//   color: #333;
-// }
-
-// .country-item .delete-button {
-//   background-color: #e0e0e0;
-//   color: #666;
-//   padding: 5px;
-//   border-radius: 50%;
-//   font-size: 14px;
-//   cursor: pointer;
-//   transition: background-color 0.3s ease, color 0.3s ease;
-// }
-
-// .country-item .delete-button:hover {
-//   background-color: #bdbdbd;
-//   color: #333;
-// }
-
-// .error-message {
-//   color: #d32f2f;
-//   font-size: 14px;
-// }
 .form {
   display: flex;
   flex-direction: column;
@@ -132,8 +42,8 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  overflow-y: auto;
-  max-height: calc(100vh - 200px); /* Adjust height based on your layout */
+  overflow-y: scroll;
+  max-height: calc(100vh - 200px);
   width: 50%;
 }
 
