--- a/src/App.scss
+++ b/src/App.scss
@@ -2,11 +2,9 @@
 
 body {
   margin: 0;
-  background-image: url('../src/assets/fAV7gHDvYoCOk6cmIS0CoGs.jpg');
   background-size: cover;
-  // background-position: bottom;
-  // max-height: 700px;
-  // background: rgb(90, 21, 71);
+  background-image: url('../src/assets/fAV7gHDvYoCOk6cmIS0CoGs.jpg');
+  box-shadow: inset 0 0 0 2000px rgba(234, 225, 223, 0.4);
   color: white;
   font-family: 'Poppins', sans-serif;
 }
@@ -37,3 +35,9 @@ body {
     justify-content: start;
   }
 }
+// .form-container {
+//   background-color: #f5f7f6; /* Light gray background color */
+//   padding: 20px; /* Add padding for spacing */
+//   border-radius: 10px; /* Add rounded corners for a softer look */
+//   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow for depth */
+// }
