--- a/src/components/AddressForm/addressForm.scss
+++ b/src/components/AddressForm/addressForm.scss
@@ -1,3 +1,4 @@
+
 .form {
   display: flex;
   flex-direction: column;
@@ -83,3 +84,11 @@
   color: #d32f2f;
   font-size: 14px;
 }
+// .overlay {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-color: rgba(0, 0, 0, 0.5); /* Adjust the alpha value (0.5) for the desired transparency */
+// }
