--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -2,11 +2,19 @@
   width: 400px;
   height: 400px;
   margin: auto 0;
-
-  .marker {
-    width: 50px;
-    height: 50px;
-  }
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 0 2000px rgba(234, 225, 223, 0.4);
+}
+// box-shadow: inset 0 0 0 2000px rgb(234 225 223 / 64%);
+// padding: 50px;
+// background-color: #f5f7f6; /* Light gray background color */
+// padding: 20px; /* Add padding for spacing */
+// border-radius: 10px; /* Add rounded corners for a softer look */
+// box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow for depth */
+.marker {
+  width: 50px;
+  height: 50px;
 }
 
 @media only screen and (max-width: 700px) {
