--- a/src/components/AutoCompleteInput/AutoCompleteInput.scss
+++ b/src/components/AutoCompleteInput/AutoCompleteInput.scss
@@ -4,12 +4,11 @@
   input {
     width: 13rem;
     list-style: none;
-    border-bottom: 1px solid black;
-    border-radius: 5px;
-    padding: 0.5em 1em;
+    border-bottom: 1px solid var(--input-border-color);
+    border-radius: 50px;
+    padding: var(--input-padding);
 
     &:hover {
-      // color: white;
       cursor: pointer;
     }
   }
@@ -18,7 +17,7 @@
     position: absolute;
     top: 1.75em;
     background-color: white;
-    border: 1px solid black;
+    border: 1px solid var(--input-border-color);
     overflow: hidden;
     border-radius: 4px;
     color: black;
@@ -27,12 +26,11 @@
 
     li {
       list-style: none;
-      border-bottom: 1px solid black;
-      padding: 0.5em 1em;
+      border-bottom: 1px solid var(--input-border-color);
+      padding: var(--input-padding);
 
       &:hover {
         background-color: rgb(22, 66, 128);
-        // color: white;
         cursor: pointer;
       }
     }
