--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,5 +1,5 @@
 .nav-container {
-  background-color: #cb2b39;
+  background-color: var(--primary-color);
   position: fixed;
   top: 0;
   width: 100%;
@@ -32,7 +32,7 @@
     transition: background-color 0.5s ease;
   }
 
-  .button:hover {
+  &:hover {
     background-color: #e0e0e0;
   }
 }
