--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+* {
+  font-family: var(----font-family);
+}
 body {
   margin: 0;
   background-size: cover;
