--- a/src/components/AddressForm/addressForm.scss
+++ b/src/components/AddressForm/addressForm.scss
@@ -16,7 +16,7 @@
 }
 
 .button {
-  padding: 10px 20px;
+  padding: 5px 20px;
   border: none;
   border-radius: 50px;
   cursor: pointer;
@@ -65,7 +65,7 @@
   .delete-button {
     background-color: var(--button-hover-color);
     color: var(--input-border-color);
-    padding: 5px 10px;
+    // padding: 5px 10px;
     border-radius: 50%;
     font-size: 14px;
     cursor: pointer;
@@ -79,6 +79,8 @@
   }
 }
 .error-message {
-  color: var(--error-color);
-  font-size: 14px;
+  // color: var(--error-color);
+  font-size: 16px;
+  font-weight: bolder;
+  text-decoration: underline;
 }
