--- a/src/components/AutoCompleteInput/AutoCompleteInput.scss
+++ b/src/components/AutoCompleteInput/AutoCompleteInput.scss
@@ -4,6 +4,7 @@
   input {
     width: 13rem;
     list-style: none;
+    font-size: 16px;
     border-bottom: 1px solid var(--input-border-color);
     border-radius: 50px;
     padding: var(--input-padding);
@@ -27,6 +28,7 @@
     li {
       list-style: none;
       padding: var(--input-padding);
+      font-family: var(--font-family); //add
 
       &:hover {
         background-color: rgb(22, 66, 128);
