--- a/src/components/AddressForm/addressForm.scss
+++ b/src/components/AddressForm/addressForm.scss
@@ -68,9 +68,10 @@
     color: var(--input-border-color);
     // padding: 5px 10px;
     border-radius: 50%;
-    font-size: 14px;
+    font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
+    border: none;
 
     &:hover {
       background-color: #bdbdbd;
