--- a/src/components/AutoCompleteInput/AutoCompleteInput.scss
+++ b/src/components/AutoCompleteInput/AutoCompleteInput.scss
@@ -28,7 +28,7 @@
     li {
       list-style: none;
       padding: var(--input-padding);
-      font-family: var(--font-family); //add
+      font-family: var(--font-family); 
 
       &:hover {
         background-color: rgb(22, 66, 128);
