--- a/src/components/AddressForm/addressForm.scss
+++ b/src/components/AddressForm/addressForm.scss
@@ -84,7 +84,7 @@
   font-size: 16px;
   font-weight: bold;
   color: black;
-  background-color: var(--primary-color);
+  background-color: #3a77f7ab;
   padding: 10px;
   border-radius: 5px;
   margin-bottom: 10px;
