--- a/src/App.scss
+++ b/src/App.scss
@@ -24,8 +24,10 @@ body {
   align-items: center;
   gap: 5rem;
   flex-wrap: wrap;
+}
 
-  @media only screen and (max-width: 700px) {
+@media only screen and (max-width: 700px) {
+  .App {
     flex-direction: column;
     align-items: center;
   }
